# LocalSec_Auditor

./: .gitignore  AGENTS.md  CLAUDE.md  CURSOR.md  README.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: __init__.py  findings.py  scans.py  tools.py
backend/app/core/: config.py  workspace.py
backend/app/crud/: __init__.py  finding.py  project.py  scan.py  task.py  task_log.py  workflow_task.py
backend/app/db/: database.py
backend/app/findings/: __init__.py  fingerprint.py
backend/app/llm/: __init__.py  client.py  prompts.py  secret_masking.py
backend/app/models/: __init__.py  finding.py  project.py  (+4 more)
backend/tests/: test_cors.py  test_dashboard_summary_api.py  test_database.py  test_finding_analysis_api.py  test_finding_crud.py  test_finding_dedup.py  test_finding_fingerprint.py  test_gitleaks_normalizer.py  test_gitleaks_scanner.py  test_grype_normalizer.py  test_grype_scanner.py  test_llm_prompts.py  test_lynis_normalizer.py  test_lynis_scanner.py  test_markdown_report.py  test_mvp_integration.py  test_ollama_client.py  test_openscap_normalizer.py  test_openscap_scanner.py  test_orchestrator.py  test_project_crud.py  test_rag_chunking.py  test_rag_embeddings.py  test_rag_ingest.py  test_rag_retrieval.py  test_rag_vector_store.py  test_report_api.py  test_scan_api.py  test_scan_compare.py  test_scan_compare_api.py  test_scan_crud.py  test_scan_dirs.py  test_scanner_runner.py  test_semgrep_normalizer.py  test_semgrep_scanner.py  test_syft_scanner.py  test_task_crud.py  test_task_log_crud.py  test_task_resolver.py  test_task_retry.py  (+4 more)
(+70 files in other folders)
